--- a/views/admin/vieworderdetails.ejs
+++ b/views/admin/vieworderdetails.ejs
@@ -63,26 +63,7 @@
         </ul>
       </section>
     </div>
-    <%if(orderData.cancellationStatus === "requested"){%>
-      <div class="container mt-5 mb-10">
-        <div class="card">
-          <div class="card-body bg-light">
-            <h3 class="card-title">Request For Cancelling Order</h3>
-            <p class="card-text">Accept or reject the request by clicking on the button.</p>
-    
-            <!-- Accept Button -->
-            <a href="/gadgetly/admin/allowcancel/?orderId=<%=orderData._id %>" class="btn btn-success mr-2">
-              <i class="fas fa-check"></i> Accept
-            </a>
-    
-            <!-- Reject Button -->
-            <a href="/gadgetly/admin/denycancel/?orderId=<%=orderData._id %>" class="btn btn-danger">
-              <i class="fas fa-times"></i> Reject
-            </a>
-          </div>
-        </div>
-      </div>
-    <% }else if(orderData.cancellationStatus === "return requested"){ %>
+    <%if(orderData.cancellationStatus === "return requested"){ %>
       <div class="container mt-5 mb-10">
         <div class="card">
           <div class="card-body bg-light">
