--- a/views/user/productgrid.ejs
+++ b/views/user/productgrid.ejs
@@ -160,14 +160,6 @@
         </div>
     </div>
     <main class="main">
-        <!-- <div class="page-header breadcrumb-wrap">
-            <div class="container">
-                <div class="breadcrumb">
-                    <a href="index.html" rel="nofollow">Home</a>
-                    <span></span> Shop
-                </div>
-            </div>
-        </div> -->
         <section class="mt-50 mb-50">
             <div class="container">
                 <div class="row flex-row-reverse">
@@ -181,25 +173,6 @@
                                 <% } %>
                             </div>
                             <div class="sort-by-product-area">
-                                <!-- <div class="sort-by-cover mr-10">
-                                    <div class="sort-by-product-wrap">
-                                        <div class="sort-by">
-                                            <span><i class="fi-rs-apps"></i>Show:</span>
-                                        </div>
-                                        <div class="sort-by-dropdown-wrap">
-                                            <span> 50 <i class="fi-rs-angle-small-down"></i></span>
-                                        </div>
-                                    </div>
-                                    <div class="sort-by-dropdown">
-                                        <ul>
-                                            <li><a class="active" href="#">50</a></li>
-                                            <li><a href="#">100</a></li>
-                                            <li><a href="#">150</a></li>
-                                            <li><a href="#">200</a></li>
-                                            <li><a href="#">All</a></li>
-                                        </ul>
-                                    </div>
-                                </div> -->
                                 <div class="sort-by-cover">
                                     <div class="sort-by-product-wrap">
                                         <div class="sort-by">
@@ -247,9 +220,6 @@
                                                 </div>
                                             </div>
                                             <div class="product-content-wrap">
-                                                <!-- <div class="product-category">
-                                                    <a href="shop-grid-right.html">Music</a>
-                                                </div> -->
                                                 <h2><a href="/gadgetly/productdetail/?id=<%= product[i]._id %>"><%= product[i].productName %></a></h2>
                                                 <div class="rating-result" title="90%">
                                                     <span>
@@ -293,65 +263,18 @@
                             <h5 class="section-title style-1 mb-30 wow fadeIn animated">Category</h5>
                             <ul class="categories">
                                 <% if(typeof category != "undefined" && category.length >0 ){
-                                    category.forEach((category)=>{ %>
-                                        <li><a href="/gadgetly/shop/?category=<%=category._id%>" ><%= category.categoryName %></a></li>
+                                    category.forEach((category)=>{
+                                        if(category._id.toString() === categorySearch){ %>
+                                            <li><a href="/gadgetly/shop/?category=<%=category._id%>" class="text-success"><strong><%= category.categoryName %></strong></a></li>
+                                        <% }else{ %>
+                                            <li><a href="/gadgetly/shop/?category=<%=category._id%>"  ><strong><%= category.categoryName %></strong></a></li>
+                                        <%} %>
+                                        
+                                        
                                 <%  })                             
                                 } %>
                             </ul>
                         </div>
-                        <!-- Fillter By Price -->
-                       
-                        <!-- Product sidebar Widget -->
-                        <!-- <div class="sidebar-widget product-sidebar  mb-30 p-30 bg-grey border-radius-10">
-                            <div class="widget-header position-relative mb-20 pb-10">
-                                <h5 class="widget-title mb-10">New products</h5>
-                                <div class="bt-1 border-color-1"></div>
-                            </div>
-                            <div class="single-post clearfix">
-                                <div class="image">
-                                    <img src="/assets/imgs/shop/thumbnail-3.jpg" alt="#">
-                                </div>
-                                <div class="content pt-10">
-                                    <h5><a href="shop-product-detail.html">Chen Cardigan</a></h5>
-                                    <p class="price mb-0 mt-5">$99.50</p>
-                                    <div class="product-rate">
-                                        <div class="product-rating" style="width:90%"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single-post clearfix">
-                                <div class="image">
-                                    <img src="/assets/imgs/shop/thumbnail-4.jpg" alt="#">
-                                </div>
-                                <div class="content pt-10">
-                                    <h6><a href="shop-product-detail.html">Chen Sweater</a></h6>
-                                    <p class="price mb-0 mt-5">$89.50</p>
-                                    <div class="product-rate">
-                                        <div class="product-rating" style="width:80%"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single-post clearfix">
-                                <div class="image">
-                                    <img src="/assets/imgs/shop/thumbnail-5.jpg" alt="#">
-                                </div>
-                                <div class="content pt-10">
-                                    <h6><a href="shop-product-detail.html">Colorful Jacket</a></h6>
-                                    <p class="price mb-0 mt-5">$25</p>
-                                    <div class="product-rate">
-                                        <div class="product-rating" style="width:60%"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="banner-img wow fadeIn mb-45 animated d-lg-block d-none">
-                            <img src="/assets/imgs/banner/banner-11.jpg" alt="">
-                            <div class="banner-text">
-                                <span>Women Zone</span>
-                                <h4>Save 17% on <br>Office Dress</h4>
-                                <a href="shop-grid-right.html">Shop Now <i class="fi-rs-arrow-right"></i></a>
-                            </div>
-                        </div> -->
                     </div>
                 </div>
             </div>
